test/fail/basic_syntax/bad_start_token.lly
#[
SyntaxError: Unexpected token +.
Where: File "bad_start_token.lly" at line 6
]#

+
